--- a/reflections-maven/pom.xml
+++ b/reflections-maven/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.reflections</groupId>
         <artifactId>reflections-parent</artifactId>
-        <version>0.9.8</version>
+        <version>0.9.9-SNAPSHOT</version>
     </parent>
 
     <artifactId>reflections-maven</artifactId>
