--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.reflections</groupId>
     <artifactId>reflections-parent</artifactId>
-    <version>0.9.9-SNAPSHOT</version>
+    <version>0.9.9-RC1</version>
     <packaging>pom</packaging>
 
     <name>Reflections</name>
@@ -14,6 +14,7 @@
     <modules>
         <module>reflections</module>
         <module>reflections-maven</module>
+        <module>reflections-spring</module>
     </modules>
 
     <licenses>
@@ -46,14 +47,14 @@
         <plugins>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.5</version>
+                <!--<version>2.5</version>-->
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
+                <!--<version>2.1.2</version>-->
                 <executions>
                     <execution>
                         <goals>
@@ -64,7 +65,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
+                <!--<version>2.8</version>-->
                 <configuration>
                     <reportOutputDirectory>javadoc</reportOutputDirectory>
                 </configuration>
@@ -72,16 +73,17 @@
 
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <!--<version>2.3.2</version>-->
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <source>1.5</source>
                     <target>1.5</target>
                 </configuration>
             </plugin>
+
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12</version>
+                <!--<version>2.12</version>-->
                 <configuration>
                     <!-- fix java.class.path -->
                     <useSystemClassLoader>false</useSystemClassLoader>
@@ -90,6 +92,18 @@
                     </additionalClasspathElements>
                 </configuration>
 			</plugin>
+
+            <plugin>
+                <!-- NOTE: We don't need a groupId specification because the group is
+                     org.apache.maven.plugins ...which is assumed by default.
+                 -->
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptors>
+                        <descriptor>uberjar.assembly.xml</descriptor>
+                    </descriptors>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
