--- a/reflections-maven/pom.xml
+++ b/reflections-maven/pom.xml
@@ -1,15 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.reflections</groupId>
         <artifactId>reflections-parent</artifactId>
-        <version>0.9.9-SNAPSHOT</version>
+        <version>0.9.9-RC1</version>
     </parent>
 
     <artifactId>reflections-maven</artifactId>
-    <name>Reflections Maven plugin</name>
     <packaging>maven-plugin</packaging>
+    <name>Reflections Maven plugin</name>
 
     <dependencies>
         <dependency>
@@ -38,6 +39,16 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>javadoc</directory>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
