--- a/reflections/pom.xml
+++ b/reflections/pom.xml
@@ -1,18 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.reflections</groupId>
         <artifactId>reflections-parent</artifactId>
-        <version>0.9.9-SNAPSHOT</version>
+        <version>0.9.9-RC1</version>
     </parent>
 
     <artifactId>reflections</artifactId>
-
     <name>Reflections</name>
-    <description>Reflections - a Java runtime metadata analysis</description>
-    <url>http://code.google.com/p/reflections/</url>
-	
+
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -80,7 +78,22 @@
             <scope>provided</scope>
             <optional>true</optional> <!-- case: -->
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>javadoc</directory>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 
 </project>
